--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=IWEBHotel
+APP_ENV=production
 APP_KEY=base64:p4c53jeqKQQr5hYxfoEMVNbgmyinYd7mguRBvxOEdLE=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
